adds a service that simply broadcast a message, and it is awake by an alarm manager every x minutes. An activity can register to receive that message through an inner static class, so the Service does not need to know the name of the Activity to wake it up

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="titlePrefs">Prefs</string>
     <string name="webInterval">Web Interval</string>
     <string name="summaryWebInterval">Interval to read from the web</string>
+    
+    <string name="amIAwake">Am I awake?</string>
+    <string name="titleWakeme">Wake me?</string>
 
 </resources>
